# Kotka

./: .gitignore  .gitmodules  Cargo.toml  README.md  _output.txt  pyproject.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: build.yaml  deploy.yaml
ci/: build.sh  set_rust_version.sh  test.sh
example_files/: bif_output.txt
example_files/Game/: GLOBALVARS.res  PARTYTABLE.res  Screen.tga  savenfo.res
kotka/: bif.py  main.py
src/: bif.rs  erf.rs  error.rs  gff.rs  lib.rs  main.rs  shared.rs  tlk.rs  tpc.rs  twoda.rs
tests/: bif_test.rs
