[package]
name = "kotka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte_struct = "0.8.0"
phf = { version = "0.11.1", features = ["macros"] }
tempfile = "3.4.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.11.0"
