[tool.poetry]
name = "kotka"
version = "0.1.0"
description = "A kotor save editor"
authors = ["Alex Nørgaard <Umbra@AbstractUmbra.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.252"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
